Update Technical Skills

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -591,7 +591,7 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">CI/CD</span>
+															<span class="text-color-dark">CI/CD (GitHub Actions)</span>
 															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -702,49 +702,43 @@
 										</div>
 									</div>
 
-									<!-- AI & Additional Tools -->
+									<!-- Merge AI & Additional Tools and Cloud Platforms -->
 									<div class="col-lg-12 mb-4">
 										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
 											<h4 class="text-color-dark mb-3">
 												<i class="fas fa-robot text-color-primary me-2"></i>
-												AI & Additional Tools
+												AI, Cloud & Frameworks
 											</h4>
 											<div class="row">
 												<div class="col-12">
 													<div class="d-flex flex-wrap gap-3">
-														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
-															<i class="fas fa-brain me-2"></i>
-															OpenFeign
-														</div>
-														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
-															<i class="fas fa-link me-2"></i>
-															LangChain
-														</div>
-														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
-															<i class="fas fa-robot me-2"></i>
-															GPT-3.5 Turbo
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12 mb-4">
-										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
-											<h4 class="text-color-dark mb-3">
-												<i class="fas fa-cloud text-color-primary me-2"></i>
-												Cloud Platforms
-											</h4>
-											<div class="row">
-												<div class="col-12">
-													<div class="d-flex flex-wrap gap-3">
-														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill fw-bold" style="font-size: 1.15rem;">
 															<i class="fab fa-aws me-2"></i>
 															AWS (Amplify, RDS, App Runner)
 														</div>
-														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill fw-bold" style="font-size: 1.15rem;">
 															<i class="fab fa-google me-2"></i>
 															Google Cloud (Cloud Run, Cloud Storage)
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill" style="font-size: 1.15rem;">
+															<i class="fas fa-link me-2"></i>
+															LangChain
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill" style="font-size: 1.15rem;">
+															<i class="fas fa-robot me-2"></i>
+															GPT-3.5 Turbo
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill" style="font-size: 1.15rem;">
+															<i class="fas fa-brain me-2"></i>
+															OpenFeign
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill" style="font-size: 1.15rem;">
+															<i class="fas fa-cogs me-2"></i>
+															Gradle
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill" style="font-size: 1.15rem;">
+															<i class="fas fa-tasks me-2"></i>
+															Jenkins
 														</div>
 													</div>
 												</div>
