--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -704,7 +704,7 @@
 
 									<!-- Merge AI & Additional Tools and Cloud Platforms -->
 									<div class="col-lg-12 mb-4">
-										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4" data-aos="zoom-in" data-aos-duration="1200">
 											<h4 class="text-color-dark mb-3">
 												<i class="fas fa-robot text-color-primary me-2"></i>
 												AI, Cloud & Frameworks
