Update to About Me

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -126,22 +126,22 @@
 									<h1 class="text-color-primary custom-font-size-1">Michelle Wang</h1>
 									<p class="text-color-light font-weight-normal custom-font-size-2 custom-margin-bottom-1">Software Engineer</p>
 									<span class="custom-about-me-infos">
-										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong>Previous:</strong> Data Analyst at First Republic Bank
+										<span class="custom-text-color-1 mb-3">
+											<strong style="text-transform: uppercase;">Previous:</strong> Data Analyst at First Republic Bank
 											<a data-hash href="#experience" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
 										</span>
-										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong>Education:</strong> Columbia University
+										<span class="custom-text-color-1 mb-3">
+											<strong style="text-transform: uppercase;">Education:</strong> Columbia University
 											<a data-hash href="#education" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
 										</span>
-										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong>Email:</strong> wang.michelle.yi@gmail.com
+										<span class="custom-text-color-1 mb-3">
+											<strong style="text-transform: uppercase;">Email:</strong> wang.michelle.yi@gmail.com
 										</span>
-										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong>Phone:</strong> 917-847-8851
+										<span class="custom-text-color-1 mb-3">
+											<strong style="text-transform: uppercase;">Phone:</strong> 917-847-8851
 										</span>
-										<span class="custom-text-color-1 text-uppercase">
-											<strong>LinkedIn:</strong> www.linkedin.com/in/michelleyiwang
+										<span class="custom-text-color-1">
+											<strong style="text-transform: uppercase;">LinkedIn:</strong> <a href="https://www.linkedin.com/in/michelleyiwang" target="_blank" style="color: #0077b5; text-decoration: underline; transition: color 0.3s ease;" onmouseover="this.style.color='#005582'" onmouseout="this.style.color='#0077b5'">www.linkedin.com/in/michelleyiwang</a>
 										</span>
 									</span>
 								</div>
@@ -202,7 +202,7 @@
 							<div class="row">
 								<div class="col-lg-8">
 									<h2 class="text-color-dark font-weight-extra-bold text-uppercase">About Me</h2>
-									<p>
+									<p style="font-size: 1.1rem; line-height: 1.6;">
 										Data expert with 7 years of industry experience in building big data analytics pipelines and leading high-impact, consumer facing projects. 
 										<span style="font-weight: bold; color: #222;">
 											Actively seeking a full-stack software engineering role to apply deep expertise in web development, machine learning, and data processing. Solid foundation in computer science and data structures, with strong proficiency in Java, JavaScript, React, Python, SQL, and HTML/CSS.
