Remove Send Message

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -877,37 +877,8 @@
 							</section>
 						</div>
 						<div class="col-lg-6 p-0">
-							<section class="section section-no-border h-100 m-0" style="background: #0091d2;">
-								<div class="row m-0">
-									<div class="col-half-section col-half-section-left ms-3">
-										<h2 class="text-color-light text-uppercase font-weight-extra-bold">Send Message</h2>
-										<form id="contactForm" class="contact-form custom-form-style form-errors-light" action="php/contact-form.php" method="post">
-											<div class="contact-form-success alert alert-success d-none mt-4" id="contactSuccess">
-												<strong>Success!</strong> Your message has been sent to us.
-											</div>
-											<div class="contact-form-error alert alert-danger d-none mt-4" id="contactError">
-												<strong>Error!</strong> There was an error sending your message.
-												<span class="mail-error-message text-1 d-block" id="mailErrorMessage"></span>
-											</div>
-
-											<div class="form-content">
-												<div class="form-control-custom form-control-custom-light">
-													<input type="text" class="form-control" name="name" placeholder="Your Name *" data-msg-required="This field is required." id="name" required />
-												</div>
-												<div class="form-control-custom form-control-custom-light">
-													<input type="email" class="form-control" name="email" placeholder="Your Email *" data-msg-required="This field is required." id="email" required />
-												</div>
-												<div class="form-control-custom form-control-custom-light">
-													<input type="text" class="form-control" name="subject" placeholder="Subject *" data-msg-required="This field is required." id="subject" required="" />
-												</div>
-												<div class="form-control-custom form-control-custom-light">
-													<textarea maxlength="5000" data-msg-required="Please enter your message." rows="10" class="form-control" name="message" placeholder="Message*" id="message" required="" aria-required="true"></textarea>
-												</div>
-												<input type="submit" class="btn btn-quaternary text-color-light text-uppercase font-weight-semibold outline-none custom-btn-style-2 custom-border-radius-1" value="Submit" />
-											</div>
-										</form>
-									</div>
-								</div>
+							<section class="section section-no-border h-100 m-0" style="background: #09203a;">
+							
 							</section>
 						</div>
 					</div>
