--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -380,7 +380,7 @@
 					</div>
 				</section>
 
-				<section id="technical-skills" class="section section-no-border bg-color-light m-0">
+				<section id="skills" class="section section-no-border bg-color-light m-0">
 					<div class="container">
 						<div class="row">
 							<div class="col">
