--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 		<!-- Add AOS CSS in the <head> -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-P6LJWRZD5Y"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-P6LJWRZD5Y');
+		</script>
 	</head>
 	<body data-plugin-scroll-spy data-plugin-options="{'target': '.wrapper-spy'}">
 
