--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 													</span>
 													<span class="to text-color-light text-uppercase">
 														To
-														<span class="font-weight-semibold">Jun 2023</span>
+														<span class="font-weight-semibold">Jul 2023</span>
 													</span>
 													<p class="text-color-light">(8 Months)</p>
 													<span class="company text-color-light font-weight-semibold">
@@ -280,7 +280,7 @@
 													</span>
 												</div>
 												<div class="experience-description col-lg-9 col-sm-7 bg-color-light">
-													<h4 class="text-color-dark font-weight-semibold">Data Analyst, Data Analytics and Automation</h4>
+													<h4 class="text-color-dark font-weight-semibold">Data Scientist Lead, Data Analytics and Automation</h4>
 													<p class="custom-text-color-2">Engineered data tools and infrastructure to support Internal Audit's analytics strategy and automation.</p>
 													<ul class="custom-list-style-1 p-0 mb-0">
 														<li><strong>Agile Development:</strong> Collaborated in Agile sprints with auditors and engineers to design and deliver internal audit analytics tools and automation pipelines.</li>
@@ -310,7 +310,7 @@
 													</span>
 												</div>
 												<div class="experience-description col-lg-9 col-sm-7 bg-color-light">
-													<h4 class="text-color-dark font-weight-semibold">Data Scientist, Product</h4>
+													<h4 class="text-color-dark font-weight-semibold">Data Scientist Lead, Product</h4>
 													<p class="custom-text-color-2">Led full-stack development of blockchain products for digital asset trading, aligned with user requirements.</p>
 													<ul class="custom-list-style-1 p-0 mb-0">
 														<li><strong>Scrum Execution:</strong> Collaborated with tech team in a Scrum environment to design and deliver smart contract-based solutions for tokenizing metal commodities.</li>
@@ -821,7 +821,7 @@
 									</div>
 									<div class="col-lg-6 mb-4">
 										<div class="custom-box-details bg-color-light custom-box-shadow-1">
-											<h4 class="text-color-dark">YouTubeTrends</h4>
+											<h4 class="text-color-dark">YouTube Trends</h4>
 											<p class="custom-text-color-2">A Python-based analytics project uncovering factors behind YouTube viewership</p>
 											<ul class="custom-list-style-1 p-0 mb-0">
 												<li>Implemented data-cleaning process on 40,000+ observations and 17 variables including both structured and unstructured data; transforming fragmented datasets into a unified dataset for streamlined analysis.</li>
